Added a loader for the main page
If the images haven't been loaded yet, the loader will appear and vice versa.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <title>My Website | GitHub Page</title>
 </head>
 <body>
+    <div id="loading">
+        <div id="loader1">
+        </div>
+        <div id="loader2">
+        </div>
+        <div id="loader3">
+        </div>
+    </div>
     <div class="snowflake">❅</div>
     <div class="snowflake">❅</div>
     <div class="snowflake">❆</div>
