--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -27,6 +27,9 @@
                     <li><b>Bootstrap</b> for styling</li>
                 </ul>
             </div>
+            <div style="margin-top: 4vh;" class="noteBox">
+                <p style="color: rgb(245, 245, 245);">Parsijoo's API service is not currently available :(</p>
+            </div>
             <hr>
             <div class="col-md-7 mx-auto">
                 <form>
