Added brand logo in the navbar
I got this ready logo from Figma, in 'Logo Creator' plugin!
I just changed the color of that.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     <div class="snowflake">❄</div>
     <header>
         <nav class="navbar">
+            <div class="brandLogo">
+                <a href="#">
+                    <img class="brandLogoImg" src="media/brand-logo.svg" alt="Brand Logo">
+                </a>
+            </div>
             <a href="#home" class="navItems">Home</a>
             <a href="#about" class="navItems">About</a>
             <a href="#skills" class="navItems">Skills</a>
