Created 'Footer' section

--- a/index.html
+++ b/index.html
@@ -26,20 +26,19 @@
         <div id="loader3">
         </div>
     </div>
-    <div class="snowflake">❅</div>
-    <div class="snowflake">❅</div>
-    <div class="snowflake">❆</div>
-    <div class="snowflake">❄</div>
-    <div class="snowflake">❅</div>
-    <div class="snowflake">❆</div>
-    <div class="snowflake">❄</div>
-    <div class="snowflake">❅</div>
-    <div class="snowflake">❆</div>
-    <div class="snowflake">❄</div>
+    <div class="flake">🍃</div>
+    <div class="flake">🍀</div>
+    <div class="flake">🌿</div>
+    <div class="flake">🍃</div>
+    <div class="flake">🍀</div>
+    <div class="flake">🌿</div>
+    <div class="flake">🍃</div>
+    <div class="flake">🍀</div>
+    <div class="flake">🌿</div>
     <header>
         <nav class="navbar">
             <div class="brandLogo">
-                <a href="#">
+                <a href="/">
                     <img class="brandLogoImg" src="media/brand-logo.svg" alt="Brand Logo">
                 </a>
             </div>
@@ -47,9 +46,9 @@
             <a href="#about" class="navItems">About</a>
             <a href="#skills" class="navItems">Skills</a>
             <a href="#projects" class="navItems">Projects</a>
-            <a href="https://github.com/salehghari" class="fab fa-github"></a>
-            <a href="https://www.instagram.com/salehghari/" class="fab fa-instagram"></a>
-            <a href="https://t.me/salehghari" class="fab fa-telegram"></a>
+            <a href="https://github.com/salehghari" class="navbarIcon fab fa-github"></a>
+            <a href="https://www.instagram.com/salehghari/" class="navbarIcon fab fa-instagram"></a>
+            <a href="https://t.me/salehghari" class="navbarIcon fab fa-telegram"></a>
             <label id="label" for="check">
                 <input type="checkbox" id="check"/> 
                 <span class="menuSpan"></span>
@@ -149,6 +148,35 @@
         </div>
         <span class="swipeText">Swipe &#10132;</span>
     </div>
+    <footer>
+        <div class="footerSection">
+            <div class="footerLanguage">
+                <h5>Language</h5>
+                <ul>
+                    <li class="footerLanguages"><a href="#">English</a></li>
+                    <li class="footerLanguages"><a href="#">Deutsch</a></li>
+                    <li class="footerLanguages"><a href="#">日本語</a></li>
+                    <li class="footerLanguages"><a href="#">Français</a></li>
+                    <li class="footerLanguages"><a href="#">Português</a></li>
+                    <li class="footerLanguages"><a href="#">中文</a></li>
+                    <li class="footerLanguages"><a href="#">Español</a></li>
+                    <li class="footerLanguages"><a href="#">Русский</a></li>
+                    <li class="footerLanguages"><a href="#">한국어</a></li>
+                </ul>
+            </div>
+            <div class="footerSocial">
+                <h5>Social</h5>
+                <a href="https://github.com/salehghari" class="footerIcon fab fa-github"></a>
+                <a href="https://www.instagram.com/salehghari/" class="footerIcon fab fa-instagram"></a>
+                <a href="https://t.me/salehghari" class="footerIcon fab fa-telegram"></a>
+            </div>
+        </div>
+        <hr class="footerLine">
+        <div class="footerLastWord">
+            <h5>Made By 💖</h5>
+            <h5>Copyright © 2022 Saleh ghari</h5>
+        </div>
+    </footer>
     <script src="my_website.js"></script>
 </body>
 
