Added new skill to Skills section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <li>CSS</li>
                 <li>JavaScript ES6</li>
                 <li>BootStrap 5</li>
-                <li>I will learn React soon, too!</li>
+                <li>ReactJS</li>
             </ul>
         </div>
     </div>
