Added new Skill
#Mahsaamini 🏴

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <div id="loader3">
         </div>
     </div>
-    <div class="flake">🍃</div>
-    <div class="flake">🍀</div>
-    <div class="flake">🌿</div>
-    <div class="flake">🍃</div>
-    <div class="flake">🍀</div>
-    <div class="flake">🌿</div>
-    <div class="flake">🍃</div>
-    <div class="flake">🍀</div>
-    <div class="flake">🌿</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
+    <div class="flake">🏴</div>
     <header>
         <nav class="navbar">
             <div class="brandLogo">
@@ -92,6 +92,7 @@
                 <li>JavaScript ES6</li>
                 <li>BootStrap 5</li>
                 <li>ReactJS</li>
+                <li>Learning Redux ...</li>
             </ul>
         </div>
     </div>
